request processing pipeline

--- a/EmployeeManagement/appsettings.json
+++ b/EmployeeManagement/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CustomKey":  "This is the key for the testing from the appsettings.json"
 }
