--- a/EmployeeManagement/Properties/launchSettings.json
+++ b/EmployeeManagement/Properties/launchSettings.json
@@ -12,7 +12,8 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "CustomKey": "This is the key for the testing from envirionmentVariable"
       }
     },
     "EmployeeManagement": {
