--- a/EmployeeManagement/appsettings.Development.json
+++ b/EmployeeManagement/appsettings.Development.json
@@ -5,5 +5,6 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "CustomKey": "This is the key for the testing from the appsettings development.json"
 }
